# pueo

./: CLAUDE.md  README.md  USAGE.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.css  App.tsx  globals.css  highlighter.ts  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: db.rs  game_builder.rs  lib.rs  main.rs
src-tauri/src/templates/: clicker.html  clicker.js  dodger.html  dodger.js  platformer.html  platformer.js
src/components/: CodeBlock.tsx  GameBuilder.tsx  GameBuilderTest.tsx  GameLibrary.tsx  GamePreview.tsx  GameRendererTest.tsx  Logo.tsx  Markdown.tsx  PhaserGameRenderer.tsx
src/hooks/: useThrottledDebounce.ts
src/schemas/: gameSpec.ts
src/store/: useChatStore.ts  useSettingsStore.ts
src/types/: gameSpec.ts  highlighter.ts
src/utils/: gameExport.ts  phaserRenderer.ts  sampleGames.ts
src/workers/: highlighter.ts
